crates/ir/tests/snapshots/lower_test__modules__constrained_ref_import.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__constrained_ref_import

declare println: (Dict, m) -> Unit
declare render_it: (Dict, r7) -> String

fn main() -> Unit =
  let v0: (Int) -> String = make_closure(render_it, [])
  let v1: String = call_closure v0(42)
  let v2: Bool = eq_string(v1, "42")
  let v3: Dict = get_dict Show[Bool]
  let v4: Unit = call println(v3, v2)
  v4
