crates/ir/tests/snapshots/lower_test__modules__constructor_fn_name_collision.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__constructor_fn_name_collision

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/io/println as println(h) -> Unit
import constructor_fn_name_collision_lib/Wrap as Wrap(Int) -> Wrapper
import constructor_fn_name_collision_lib/Wrap_value as Wrap_value(Wrapper) -> Int
declare Wrap_value: (Wrapper) -> Int
declare println: (h) -> Unit

fn main() -> Unit =
  let v1: ~Wrapper = construct Wrapper::Wrap#0(7)
  let v2: Int = call Wrap_value(v1)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Unit = call println(v0, v2)
  v3
