crates/ir/tests/snapshots/lower_test__modules__cross_module_same_variant.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__cross_module_same_variant

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/io/println as println(h) -> Unit
import cross_module_same_variant_a/Num as Num(Int) -> Value
import cross_module_same_variant_a/Str as Str(String) -> Value
declare println: (h) -> Unit

fn extract(v0: Value) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 (v2: String) ->
      0
  }

fn main() -> Unit =
  let v4: ~Value = construct Value::Num#0(42)
  let v5: Int = call extract(v4)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v3, v5)
  v6
